--- a/iPractice.Api/iPractice.Api.csproj
+++ b/iPractice.Api/iPractice.Api.csproj
@@ -18,12 +18,17 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="5.0.9" />
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="5.0.9" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.14" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.2.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.2.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\iPractice.ApiBase\iPractice.ApiBase.csproj" />
+    <ProjectReference Include="..\iPractice.Application\iPractice.Application.csproj" />
     <ProjectReference Include="..\iPractice.DataAccess\iPractice.DataAccess.csproj" />
   </ItemGroup>
 
